fix(java): use Arrays.asList in browseSynonyms test for Java 8
`List.of` is Java 9+, but the Java client targets Java 8 (the `client java@8`
CI job failed). Replace it with `Arrays.asList`.